--- a/package.json
+++ b/package.json
@@ -12,17 +12,28 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.15.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@types/bcrypt": "^5.0.2",
+    "@types/mongodb": "^4.0.7",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.4.3",
     "classnames": "^2.5.1",
+    "css-loader": "^7.1.2",
     "framer-motion": "^11.2.10",
+    "mongodb": "^6.7.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
+    "postcss-loader": "^8.1.1",
+    "prisma": "^5.15.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "swr": "^2.2.5"
+    "style-loader": "^4.0.0",
+    "swr": "^2.2.5",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "@types/node": "^20",
