--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:db": "ts-node scripts/testMongoConnection.ts"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
@@ -19,9 +20,12 @@
     "@types/mongodb": "^4.0.7",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
     "classnames": "^2.5.1",
+    "cors": "^2.8.5",
     "css-loader": "^7.1.2",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
     "mongodb": "^6.7.0",
     "next": "^14.2.4",
@@ -33,9 +37,13 @@
     "react-dom": "^18.3.1",
     "style-loader": "^4.0.0",
     "swr": "^2.2.5",
+    "timers": "^0.1.1",
+    "timers-browserify": "^2.0.12",
     "ws": "^8.17.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -44,6 +52,7 @@
     "eslint-config-next": "14.2.4",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
