--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@types/bcrypt": "^5.0.2",
     "@types/mongodb": "^4.0.7",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
