--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.15.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@tailwindcss/forms": "^0.5.7",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/mongodb": "^4.0.7",
     "@vercel/analytics": "^1.3.1",
@@ -28,6 +31,7 @@
     "css-loader": "^7.1.2",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
+    "jest": "^29.7.0",
     "mongodb": "^6.7.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
@@ -36,6 +40,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "recharts": "^2.12.7",
     "style-loader": "^4.0.0",
     "swr": "^2.2.5",
     "timers": "^0.1.1",
@@ -46,8 +51,8 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
