added authentication with google, fixed layout etc

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "recharts": "^2.12.7",
+    "socket.io-client": "^4.7.5",
     "style-loader": "^4.0.0",
     "swr": "^2.2.5",
     "timers": "^0.1.1",
@@ -50,9 +51,11 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/socket.io-client": "^3.0.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
