--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.15.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@tailwindcss/forms": "^0.5.7",
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/mongodb": "^4.0.7",
     "@vercel/analytics": "^1.3.1",
@@ -33,7 +32,6 @@
     "express": "^4.19.2",
     "framer-motion": "^11.2.10",
     "https": "^1.0.0",
-    "jest": "^29.7.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "next": "^14.2.4",
@@ -44,6 +42,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "recharts": "^2.12.7",
+    "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "style-loader": "^4.0.0",
     "swr": "^2.2.5",
@@ -52,8 +51,11 @@
     "ws": "^8.17.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
+    "@types/jest": "^29.5.12",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
@@ -62,8 +64,10 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "jest": "^29.7.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
+    "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
