--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ yarn-error.log*
 .env*.local
 .env
 .env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
