--- a/package.json
+++ b/package.json
@@ -7,68 +7,63 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:db": "ts-node scripts/testMongoConnection.ts"
+    "test": "jest"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@next-auth/mongodb-adapter": "^1.1.3",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.15.0",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@tailwindcss/forms": "^0.5.7",
-    "@types/bcrypt": "^5.0.2",
-    "@types/mongodb": "^4.0.7",
-    "@vercel/analytics": "^1.3.1",
+    "@prisma/client": "^5.15.1",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
-    "classnames": "^2.5.1",
-    "cors": "^2.8.5",
-    "css-loader": "^7.1.2",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "framer-motion": "^11.2.10",
-    "https": "^1.0.0",
-    "mongodb": "^6.7.0",
-    "mongoose": "^8.4.3",
-    "next": "^14.2.4",
+    "framer-motion": "^11.2.11",
+    "mongodb": "^4.3.0",
+    "next": "latest",
     "next-auth": "^4.24.7",
-    "postcss-loader": "^8.1.1",
-    "prisma": "^5.15.0",
+    "postcss": "^8.4.38",
+    "prisma": "^5.15.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "recharts": "^2.12.7",
     "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5",
-    "style-loader": "^4.0.0",
     "swr": "^2.2.5",
-    "timers": "^0.1.1",
-    "timers-browserify": "^2.0.12",
-    "ws": "^8.17.0"
+    "tailwindcss": "^3.4.4",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/react": "^14.0.0",
     "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^29.5.12",
-    "@types/next-auth": "^3.15.0",
-    "@types/node": "^20",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/socket.io-client": "^3.0.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "@types/node": "^16.11.7",
+    "@types/react": "^18.0.38",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "jest": "^29.7.0",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
-    "ts-jest": "^29.1.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^3.3.2",
+    "ts-jest": "^29.1.5"
+  },
+  "jest": {
+    "testEnvironment": "jest-environment-jsdom",
+    "setupFilesAfterEnv": ["@testing-library/jest-dom/extend-expect"],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
   }
 }
