--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@next/bundle-analyzer": "^14.2.4",
+    "@next/env": "^14.2.4",
     "@prisma/client": "^5.15.1",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "babel-plugin-module-resolver": "^5.0.2",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.11",
     "mongodb": "^4.3.0",
-    "next": "latest",
+    "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "postcss": "^8.4.38",
     "prisma": "^5.15.1",
@@ -35,16 +38,22 @@
     "typescript": "^4.5.4"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.24.7",
+    "@babel/plugin-transform-runtime": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^14.3.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^16.11.7",
-    "@types/react": "^18.0.38",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
     "eslint-config-prettier": "^9.1.0",
@@ -57,13 +66,5 @@
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.2",
     "ts-jest": "^29.1.5"
-  },
-  "jest": {
-    "testEnvironment": "jest-environment-jsdom",
-    "setupFilesAfterEnv": ["@testing-library/jest-dom/extend-expect"],
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
   }
 }
