--- a/package.json
+++ b/package.json
@@ -6,65 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "test": "jest"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@next-auth/mongodb-adapter": "^1.1.3",
-    "@next/bundle-analyzer": "^14.2.4",
-    "@next/env": "^14.2.4",
-    "@prisma/client": "^5.15.1",
-    "autoprefixer": "^10.4.19",
-    "axios": "^1.7.2",
-    "babel-plugin-module-resolver": "^5.0.2",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
-    "chart.js": "^4.4.3",
-    "dotenv": "^16.4.5",
-    "framer-motion": "^11.2.11",
-    "mongodb": "^4.3.0",
-    "next": "^14.2.4",
-    "next-auth": "^4.24.7",
-    "postcss": "^8.4.38",
-    "prisma": "^5.15.1",
-    "react": "^18.3.1",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1",
-    "socket.io": "^4.7.5",
-    "swr": "^2.2.5",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^4.5.4"
+    "chart.js": "^3.5.1",
+    "cors": "^2.8.5",
+    "jsdom": "^16.6.0",
+    "mongodb": "^4.1.1",
+    "next": "10.2.3",
+    "next-auth": "^3.27.3",
+    "react": "17.0.2",
+    "react-chartjs-2": "^3.0.4",
+    "react-dom": "17.0.2",
+    "socket.io": "^4.1.3"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-jsx": "^7.24.7",
-    "@babel/plugin-transform-runtime": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^14.3.1",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/dotenv": "^8.2.0",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^16.11.7",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
-    "babel-jest": "^29.7.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.3.2",
-    "ts-jest": "^29.1.5"
+    "@testing-library/react": "^11.2.7",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsdom": "^16.2.14",
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.13",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
+    "eslint": "^7.30.0",
+    "eslint-plugin-react": "^7.24.0",
+    "jest": "^27.0.6",
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5"
   }
+  
 }
