npm build, Lint and test passed

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,5 +25,10 @@
   "rules": {
     "prettier/prettier": "error",
     "react/react-in-jsx-scope": "off"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
