--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "ttx",
   "version": "0.1.0",
@@ -8,36 +9,54 @@
     "start": "next start",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "test": "jest"
+    "test": "jest",
+    "micro-agent-start": "micro-agent start",
+    "micro-agent-build": "micro-agent build"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "chart.js": "^3.5.1",
     "cors": "^2.8.5",
+    "framer-motion": "^11.2.11",
     "jsdom": "^16.6.0",
     "mongodb": "^4.1.1",
-    "next": "10.2.3",
-    "next-auth": "^3.27.3",
-    "react": "17.0.2",
+    "next": "^14.2.4",
+    "next-auth": "^4.24.7",
+    "react": "^18.3.1",
     "react-chartjs-2": "^3.0.4",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.3.1",
     "socket.io": "^4.1.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@builder.io/micro-agent": "^0.1.2",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^14.5.2",
     "@types/bcryptjs": "^2.4.2",
+    "@types/jest": "^29.5.12",
     "@types/jsdom": "^16.2.14",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
-    "eslint": "^7.30.0",
-    "eslint-plugin-react": "^7.24.0",
-    "jest": "^27.0.6",
-    "prettier": "^2.3.2",
-    "typescript": "^4.3.5"
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.5",
+    "typescript": "^4.4.4"
   }
-  
 }
